[package]
name = "seabox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
nix = { version = "0.30.1", features = ["user"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shlex = "1.3.0"
toml = "0.9.5"
